--- a/tex/2-00-final.tex
+++ b/tex/2-00-final.tex
@@ -16,8 +16,8 @@ The purpose of this project is to examine and compare these approaches, while co
 We make the following contributions:
 \begin{enumerate}
 \item Implement and analyze a 2D-CNN $\to$ LSTM architecture for video classification.
-\item Introduce and analyze a novel 2D-CNN $\to$ 2D-CNN architecture for video classification. 
-\item Investigate the effect of replacing the first CNN with novel ImageNet architectures.
+\item Introduce and analyze a novel 2D-CNN $\to$ 2D-CNN architecture (``TCNN'') for video classification. 
+\item Investigate the effect of replacing the first CNN with state-of-the-art ImageNet architectures.
 \end{enumerate}
 
 \section{Background}
@@ -190,9 +190,12 @@ Perhaps the most noticeable result is that the quality of the first convolutiona
 
 Data volume is very important. We had 10000 videos in our data set, but C3D was able to train on one million videos, as well as a proprietary Facebook data set. In earlier work, Karpathy, et al. demonstrated that additional training on the Sports-1M data-set raised their testing accuracy on UCF-101 from 41.3\% to 65.4\%~\cite{cnnvid}, so we would expect large gains from training on a larger data set as well.
 
-The temporal CNN was not as effective as the LSTM model, and in fact only performed incrementally better than the raw CNN model. Performing convolutions across feature vectors is tricky. 
+The temporal CNN was not as effective as the LSTM model, and in fact only performed incrementally better than the raw CNN model. Performing convolutions across feature vectors is tricky-- while one dimension corresponds to temporal changes of the feature vectors, the other dimension (between elements of a given feature vector) does not have a clear interpretation. In addition, tuning the size of the convolution kernel (or alternatively, tuning the granularity with which frames are chosen) is a large experiment which we did not have time to perform. 
 
-One of the possible future work can be using multi-dimensional LSTM. The current LSTM model is built on the fully-connected layer, which does not conserve spatial information. We would like to examine the effectiveness of adding the LSTM network at earlier layers. If we apply LSTM directly after the convolution layer, the input to LSTM model is actually multi-dimensional tensor. To address this challenge, we would like to apply the multi-dimensional LSTM
+
+Ultimately, we have demonstrated excellent performance of close to 80\% classification accuracy on a video set of 101 classes. We have confirmed the efficacy of previous proposed methods while experimenting with the novel TCNN model. By using the newest ImageNet models we were able to greatly exceed previous published results. 
+
+Future work would include training on larger data sets such as Sports-1M and fine-tuning the TCNN model. Another possible future work would be using a \emph{multi-dimensional} LSTM. The current LSTM model is built on the fully-connected layer, which does not conserve spatial information. We would like to examine the effectiveness of adding the LSTM network at earlier layers. If we apply LSTM directly after the convolution layer, the input to LSTM model is actually multi-dimensional tensor. To address this challenge, we would like to apply the multi-dimensional LSTM
 \cite{byeon2015scene} to efficiently take advantage of the spatial information following an early convolution layer. 
 
 Our code is available at~\url{http://github.com/cjbattagl/deeplearningproj}.
